;; This is a library.
(library
  (name baby)
  (public_name baby)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44) (ocamlopt_flags :standard -S))
  (release (flags :standard -noassert ) (ocamlopt_flags :standard -S))
)

;; Some files require preprocessing by cppo.

(rule
  (targets Height.ml)
  (deps Height.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} Height.cppo.ml -o %{targets})))

(rule
  (targets Weight.ml)
  (deps Weight.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} Weight.cppo.ml -o %{targets})))

(rule
  (targets Baby.ml)
  (deps Baby.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} Baby.cppo.ml -o %{targets})))

(rule
  (targets H.ml)
  (deps H.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} H.cppo.ml -o %{targets})))

(rule
  (targets W.ml)
  (deps W.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} W.cppo.ml -o %{targets})))

;; Request documentation.
(documentation)

;; This rule allows distinguishing development builds and release builds.
;; The file Profile.ml defines the Boolean flag [release] to be [true]
;; in a release build and false in a development build.

(rule
  (enabled_if (= %{profile} dev))
  (action
    (with-stdout-to profile.ml
      (echo "let release = false\nlet debug = true\n")
)))

(rule
  (enabled_if (= %{profile} release))
  (action
    (with-stdout-to profile.ml
      (echo "let release = true\nlet debug = false\n")
)))
