;; This is a library.
(library
  (name baby)
  (public_name baby)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44) (ocamlopt_flags :standard -S))
  (release (flags :standard -noassert ) (ocamlopt_flags :standard -S))
)

;; To avoid warning 70, we copy Signatures.ml to Signatures.mli.

(rule
  (targets Signatures.mli)
  (action (copy Signatures.ml Signatures.mli))
)

;; Some files require preprocessing by cppo.

(rule
  (targets Signatures.ml)
  (deps Signatures.cppo.ml)
  (action (run %{bin:cppo} Signatures.cppo.ml -o %{targets})))

(rule
  (targets HeightSet.ml)
  (deps Height.cppo.ml TreeDef.frag.ml OfSortedUniqueArraySlice.frag.ml)
  (action (run %{bin:cppo} Height.cppo.ml -o %{targets})))

(rule
  (targets HeightMap.ml)
  (deps Height.cppo.ml TreeDef.frag.ml OfSortedUniqueArraySlice.frag.ml)
  (action (run %{bin:cppo} Height.cppo.ml -o %{targets} -D MAP_VARIANT)))

(rule
  (targets WeightSet.ml)
  (deps Weight.cppo.ml TreeDef.frag.ml OfSortedUniqueArraySlice.frag.ml)
  (action (run %{bin:cppo} Weight.cppo.ml -o %{targets})))

(rule
  (targets WeightMap.ml)
  (deps Weight.cppo.ml TreeDef.frag.ml OfSortedUniqueArraySlice.frag.ml)
  (action (run %{bin:cppo} Weight.cppo.ml -o %{targets} -D MAP_VARIANT)))

(rule
  (targets Baby.ml)
  (deps Baby.cppo.ml (glob_files *.frag.ml) (glob_files *.macros))
  (action (run %{bin:cppo} Baby.cppo.ml -o %{targets})))

(rule
  (targets H.ml)
  (deps H.cppo.ml (glob_files *.frag.ml) (glob_files *.macros))
  (action (run %{bin:cppo} H.cppo.ml -o %{targets})))

(rule
  (targets W.ml)
  (deps W.cppo.ml (glob_files *.frag.ml) (glob_files *.macros))
  (action (run %{bin:cppo} W.cppo.ml -o %{targets})))

;; Request documentation.
(documentation)
